feat: add ErrorResponse DTO and optimize product fetching in SaleService